--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,16 @@
+html,
+body {
+	height: 100%;
+}
+
+#page {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .game-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
